# ethics_csd_pu_ffm2021

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: start_local.sh
data/processed/: credit_masterdata.parquet
data/raw/: credit_card_balances.parquet
