[tool.poetry]
name = "ethical-ai-expedition-july2021"
version = "0.1.0"
description = "Ethical AI at expedITion Codify Challenge in July 2021"
authors = ["Zeid Zandi, Daniel Schulz"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.9"
# bevy = "^0.5.2"
# dependency-injector = ">=4.0.0"
mlflow = ">=1.0.0"
ngboost = ">=0.3.0"
numpy = ">=1.0.0"
onnx = ">=1.0.0"
pandas = ">=1.0.0"
pyarrow = ">=4.0.0"
pyreadstat = ">=1.0.0"
scikit-learn = ">=0.20.0"
# serum = ">=5.0.0"
shap = ">=0.30.0"
skl2onnx = ">=1.8.0"
# tensorflow = ">=2.0.0"
torch = ">=1.8.0"
torchaudio = ">=0.9.0"
torch-summary = ">=1.4.5"
torchvision = ">=0.9.0"
tqdm = ">=4.0.0"
xgboost = ">=1.0.0"
wily = ">=1.0.0"
serum = ">=5.0.0"
bevy = ">=0.5.2"
dependency-injector = "^4.34.2"

[tool.poetry.dev-dependencies]
aif360 = ">=0.4.0"
altair = ">=4.0.0"
black = "21.6b0"
bokeh = ">=2.0.0"
conventional-commit = ">=0.4.0"
cookiecutter = ">=1.0.0"
coverage = ">=5.0"
dataprep = ">=0.3.0"
dowhy = ">=0.1"
dvc = "^2.3.0"
flake8 = ">=3.9.2"
ggplot = ">=0.10.0"
jupyter_contrib_nbextensions = ">=0.5.0"
jupyterlab = ">=3.0.0"
jupyterlab_widgets = "^1.0.0"
nbdev = ">=1.0.0"
notebook = ">=6.0.0"
pandas-profiling = ">=1.0.0"
pip-licenses = ">=1.0.0"
pixiedust = ">=1.0.0"
plotly = ">=4.0.0"
pre-commit = ">=2.0.0"
pre-commit-hooks = ">=4.0.0"
pybuilder = ">=0.10.0"
pybuilder-semver-git-tag = ">=1.0.0"
pyhist = ">=0.0.1"
pylint = ">=2.0.0"
pytest = ">=6.0.0"
seaborn = "^0.11.1"
semver = "^2.13.0"
sweetviz = ">=2.0.0"
xeus-python = "^0.12.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
